@@ -476,6 +476,8 @@ static List *msg_to_pdu(Boxc *box, Msg *msg)
     int dlr_state = 7; /* UNKNOWN */
     Msg *dlr;
     char *text, *tmps, err[4] = { '0', '0', '0', '\0' };
+    char submit_date_c_str[11] = { '\0' }, done_date_c_str[11] = { '\0' };
+    struct tm tm_tmp;
     Octstr *msgid, *msgid2, *dlr_status, *dlvrd;
     /* split variables */
     List *list;
@@ -654,6 +656,12 @@ static List *msg_to_pdu(Boxc *box, Msg *msg)
 		submit_date = msg->sms.time;
 	}
 
+	tm_tmp = gw_localtime(submit_date);
+	gw_strftime(submit_date_c_str, sizeof(submit_date_c_str), "%y%m%d%H%M", &tm_tmp);
+
+	tm_tmp = gw_localtime(dlr->sms.time);
+	gw_strftime(done_date_c_str, sizeof(done_date_c_str), "%y%m%d%H%M", &tm_tmp);
+
 	/* the msgids are in dlr->dlr_url as reported by Victor Luchitz */
 	gwlist_destroy(parts, octstr_destroy_item);
 	parts = octstr_split(dlr->sms.dlr_url, octstr_imm(";"));
@@ -675,8 +683,9 @@ static List *msg_to_pdu(Boxc *box, Msg *msg)
 			if (box->version > 0x33) {
 				pdu2->u.deliver_sm.receipted_message_id = octstr_duplicate(msgid2);
 				pdu2->u.deliver_sm.message_state = dlr_state;
+				pdu2->u.deliver_sm.tlv = meta_data_get_values(msg->sms.meta_data, "smpp");
 			}
-			pdu2->u.deliver_sm.short_message = octstr_format("id:%S sub:001 dlvrd:%S submit date:%ld done date:%ld stat:%S err:%s text:%12s", msgid2, dlvrd, submit_date, dlr->sms.time, dlr_status, err, text);
+			pdu2->u.deliver_sm.short_message = octstr_format("id:%S sub:001 dlvrd:%S submit date:%s done date:%s stat:%S err:%s text:%12s", msgid2, dlvrd, submit_date_c_str, done_date_c_str, dlr_status, err, text);
 			octstr_destroy(msgid2);
 			gwlist_append(pdulist, pdu2);
 		}
@@ -686,8 +695,9 @@ static List *msg_to_pdu(Boxc *box, Msg *msg)
 		if (box->version > 0x33) {
 			pdu->u.deliver_sm.receipted_message_id = octstr_duplicate(msgid);
 			pdu->u.deliver_sm.message_state = dlr_state;
+			pdu->u.deliver_sm.tlv = meta_data_get_values(msg->sms.meta_data, "smpp");			
 		}
-		pdu->u.deliver_sm.short_message = octstr_format("id:%S sub:001 dlvrd:%S submit date:%ld done date:%ld stat:%S err:%s text:%12s", msgid, dlvrd, submit_date, dlr->sms.time, dlr_status, err, text);
+		pdu->u.deliver_sm.short_message = octstr_format("id:%S sub:001 dlvrd:%S submit date:%s done date:%s stat:%S err:%s text:%12s", msgid, dlvrd, submit_date_c_str, done_date_c_str, dlr_status, err, text);
 		gwlist_append(pdulist, pdu);
 	}
 	octstr_destroy(msgid);
